--- a/web.css
+++ b/web.css
@@ -23,7 +23,8 @@ body {
     border-radius: 0.9rem;
     min-height: 45vh;
     width: 40vh;
-    box-shadow: 2px 2px 5px;
+    box-shadow: 1.2px 1.2px 6px #0071e3;
+/*     box-shadow: 2px 2px 5px; */
 }
 
 form {
